Use word-break to avoid horizontal scrollbars inside popups
Bug: T144267

--- a/modules/ext.RevisionSlider.css
+++ b/modules/ext.RevisionSlider.css
@@ -128,6 +128,8 @@ of the frameless one (to fit the size of the toggle button */
 
 .mw-revslider-tooltip {
 	font-size: 0.8em;
+	word-break: break-word;
+	word-wrap: break-word;
 }
 
 .mw-revslider-revision-tooltip .mw-revslider-change-positive {
